--- a/development/sass/_common.scss
+++ b/development/sass/_common.scss
@@ -226,19 +226,21 @@ p:empty {
 		margin-right: 20px;
 		min-width: 100px;
 
-		*{
-			pointer-events: none;
-		}
-
 		@include break (small) {
 			margin-right: 0;
 		}
 
+		span {
+			pointer-events: none;
+		}
+		
 		input {
-			width: 0;
-			height: 0;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
 			opacity: 0;
-			visibility: hidden;
+			z-index: 9;
 			margin: 0;
 			position: absolute;
 		}
