--- a/development/sass/_modal_window.scss
+++ b/development/sass/_modal_window.scss
@@ -339,6 +339,12 @@ html {
 			@include break (small) {
 				font-size: 16px;
 			}
+			@include break (phone) {
+				font-size: 14px;
+				br {
+					display: none;
+				}
+			}
 		}
 	}
 
